tests/neg/interop_typetags_arenot_classtags.check


-- Error: tests/neg/interop_typetags_arenot_classtags/Test_3.scala:6:23 ------------------------------------------------
6 |    println(classTag[T]) // error
  |                       ^
  |                       No ClassTag available for T
